<resources>
    <string name="app_name">Notas</string>
    <string name="action_settings">Settings</string>
    <string name="stormtrooper">STORMTROOPER</string>
    <string name="title_activity_lateralmenu">lateralmenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="a_adir_alumnos">AÑADIR ALUMNOS</string>
    <string name="nota">Nota</string>
    <string name="enviar">Enviar</string>
    <string name="a_adir_alumnos2">Añadir alumnos</string>
    <string name="mostrar_estadisticas">Mostrar estadisticas</string>
    <string name="aprobar_a_todos">Aprobar a todos</string>
    <string name="media_global">MEDIA GLOBAL</string>
    <string name="buscar_alumno">BUSCAR ALUMNO</string>
    <string name="valores_de_fabrica">Valores de fabrica</string>
    <string name="ayuda">Ayuda</string>
    <string name="modificar_nombre">Modificar nombre</string>
    <string name="modificar_nota">Modificar nota</string>
    <string name="modificar_alumnos">MODIFICAR ALUMNOS</string>
    <string name="nombre_actual">Nombre actual</string>
    <string name="modificar_nombre2">MODIFICAR NOMBRE</string>
    <string name="modificar_nota2">MODIFICAR NOTA</string>
    <string name="nombre_del_alumno">Nombre del alumno</string>
    <string name="evaluacion_a_cambiar">Evaluacion a cambiar</string>
    <string name="guardar">GUARDAR</string>
    <string name="estadisticas">ESTADISTICAS</string>
    <string name="buscar_alumnos">BUSCAR ALUMNOS</string>
    <string name="nombre">Nombre</string>
    <string name="buscar">BUSCAR</string>
    <string name="todo">TODO</string>
    <string name="entrar">ENTRAR</string>
    <string name="usuario">Usuario</string>
    <string name="registo_de_notas">Registo de notas</string>
    <string name="contrase_a">Contraseña</string>
    <string name="by_jertox">BY: Jertox</string>
</resources>
